[package]
name = "async-global-executor"
version = "2.0.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A global executor built on top of async-executor and async-io"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/async-global-executor"
homepage = "https://github.com/Keruspe/async-global-executor"
documentation = "https://docs.rs/async-global-executor"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = ["async-io"]
tokio = ["tokio-crate"]
tokio02 = ["tokio02-crate"]
tokio03 = ["tokio03-crate"]

[dependencies]
async-channel = "^1.5"
async-executor = "^1.4"
async-mutex = "^1.4"
blocking = "^1.0"
futures-lite = "^1.0"
num_cpus = "^1.13"
once_cell = "^1.4"

[dependencies.async-io]
version = "^1.2"
optional = true

[dependencies.tokio-crate]
package = "tokio"
version = "^1.0"
optional = true
default-features = false
features = ["rt", "rt-multi-thread"]

[dependencies.tokio02-crate]
package = "tokio"
version = "^0.2"
optional = true
default-features = false
features = ["rt-core"]

[dependencies.tokio03-crate]
package = "tokio"
version = "^0.3.4"
optional = true
default-features = false
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
doc-comment = "^0.3"
