[package]
name = "async-global-executor"
version = "2.4.1"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A global executor built on top of async-executor and async-io"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/async-global-executor"
homepage = "https://github.com/Keruspe/async-global-executor"
documentation = "https://docs.rs/async-global-executor"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.60"

[features]
default = ["async-io"]
tokio = ["tokio-crate"]
tokio02 = ["tokio02-crate"]
tokio03 = ["tokio03-crate"]

[dependencies]
async-channel = "^2.1.1"
async-executor = "^1.8"
async-lock = "^3.2"
blocking = "^1.5"
futures-lite = "^2.0"
once_cell = "^1.4"

[dependencies.async-io]
version = "^2.2.1"
optional = true

[dependencies.tokio-crate]
package = "tokio"
version = "^1.0"
optional = true
default-features = false
features = ["rt", "rt-multi-thread"]

[dependencies.tokio02-crate]
package = "tokio"
version = "^0.2"
optional = true
default-features = false
features = ["rt-core"]

[dependencies.tokio03-crate]
package = "tokio"
version = "^0.3.4"
optional = true
default-features = false
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
doc-comment = "^0.3"
