[package]
name = "async-global-executor"
version = "3.1.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description =  "A global executor built on top of async-executor and async-io"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/async-global-executor"
homepage = "https://github.com/Keruspe/async-global-executor"
documentation = "https://docs.rs/async-global-executor"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
rust-version = "1.85"

[features]
default = ["async-io"]
async-io = ["dep:async-io"]
tokio = ["dep:tokio"]

[dependencies]
async-channel = "^2.1.1"
async-lock = "^3.2"
blocking = "^1.5"
futures-lite = "^2.0"

[dependencies.async-executor]
version = "^1.12"
features = ["static"]

[dependencies.async-io]
version = "^2.2.1"
optional = true

[dependencies.tokio]
version = "^1.0"
optional = true
default-features = false
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
doc-comment = "^0.3"
